修改 采购计划 质检不合格逻辑

--- a/core/app/views/ProcureUnits/_unit_list_v3.html
+++ b/core/app/views/ProcureUnits/_unit_list_v3.html
@@ -167,9 +167,9 @@
     <td style="color:${unit.shipType.rgb()}">${unit.shipType?.label()}<br>
       <span style="color:red">${unit.isDedicated?'(专线)':''}</span>
     </td>
-    <td>#{time_tooltip time:unit.attrs.planDeliveryDate/}</td>
-    <td>#{time_tooltip time:unit.attrs.planShipDate/}</td>
-    <td>#{time_tooltip time:unit.attrs.deliveryDate/}</td>
+    <td>#{time_tooltip_v3 time:unit.attrs.planDeliveryDate/}</td>
+    <td>#{time_tooltip_v3 time:unit.attrs.planShipDate/}</td>
+    <td>#{time_tooltip_v3 time:unit.attrs.deliveryDate/}</td>
     <td>
       <a href="@{Inbounds.editByUnitId(unit.id)}" target="_blank">
       ${unit.result?.label()}
