* 修复 合作伙伴 sku页面“删除方案”按钮 无效问题

--- a/core/app/views/Cooperators/newCooperItem.html
+++ b/core/app/views/Cooperators/newCooperItem.html
@@ -68,8 +68,8 @@
       <tr>
         <td colspan="4" id="addTd">
             #{list items: copItem.items, as:'dto'}
-              <div class="alert alert-info" id="add_div_${item_index}"><h4>方案${dto_index}(${dto.schemeName})</h4></div>
-              <table class="table table-condensed table-bordered" id="add_table_${item_index}">
+              <div class="alert alert-info" id="add_div_${dto_index}"><h4>方案${dto_index}(${dto.schemeName})</h4></div>
+              <table class="table table-condensed table-bordered" id="add_table_${dto_index}">
                 <tr>
                   <th>每箱数量</th>
                   <td>
