--- a/core/app/views/Profits/index.html
+++ b/core/app/views/Profits/index.html
@@ -1,73 +1,84 @@
-#{extends 'main_full.html'/}
+#{extends 'main_full_v3.html'/}
 #{set title:"SKU 利润分析" /}
+#{set 'moreStyles'}
+    #{stylesheet 'bootstrap3/dataTables.bootstrap.css'/}
+#{/set}
 #{set 'moreScripts'}
-    #{script 'jquery.dataTables.js'/}
+    #{script 'bootstrap3/jquery.dataTables.js'/}
+    #{script 'bootstrap3/dataTables.bootstrap.js'/}
     #{script 'profits/index.coffee'/}
 #{/set}
 
 #{flash_alert /}
 #{errorMsgs /}
 
-#{form @Profits.index(), class:'search_form', id:'profits_form'}
-<div class="row-fluid">
-  <div class="span12">
-    <div class="input-prepend input-append inline">
-      <span class="add-on">From:</span>
-      <input type="date" name="p.begin" value="${p.begin.date()}">
-      <span class="add-on">To:</span>
-      <input type="date" name="p.end" value="${p.end.date()}">
-    </div>
-    <div class="inline">
-        #{select_enum name:'p.pmarket', items:models.market.M.values(), value:p.market}
+
+<div class="row">
+  <div class="col-md-12">
+    <div class="box box-primary">
+      <div class="box-header with-border">
+        <form action="@{Profits.index()}" method="post" class="form-inline" id="profits_form">
+          <div class="form-group">
+            <div class="input-group">
+              <div class="input-group-addon">From:</div>
+              <input style="width:100px;" class="form-control" role="date" name="p.begin" value="${p.begin.date()}">
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="input-group">
+              <div class="input-group-addon">To:</div>
+              <input style="width:100px;" class="form-control" role="date" name="p.end" value="${p.end.date()}">
+            </div>
+          </div>
+        #{select_enum name:'p.pmarket', items:models.market.M.values(), value:p.market, class: 'form-control'}
           <option value="market">Market</option>
           <option value="total">汇总</option>
         #{/select_enum}
-        #{select 'p.category', items:categorys, value: p.category}
-            #{option ''}Category#{/option}
-        #{/select}
-      <th>SKU:</th>
-      <td>
-        <input type="text" name="p.sku" data-provide="typeahead" data-source="${skus}"
-               value="${p?.sku}" id="unit_sku">
-      </td>
-    </div>
 
-    <div class="input-prepend input-append inline">
-      <span class="add-on"><i class="icon-search"></i></span>
-      <button class="btn btn-primary" data-loading>搜索</button>
-      <button class="btn btn-primary" id="exceldown">导出Excel</button>
-      <button class="btn btn-primary" id="reportInventory">计算Inventory成本</button>
-    </div>
-  </div>
-</div>
+          <select class="form-control" style="width:100px;" name="p.category">
+            <option value="">Category</option>
+          #{list items:categorys, as:'c'}
+            <option value="${c}" ${p.category==c?'selected':''}>${c}</option>
+          #{/list}
+          </select>
 
-<div class="row-fluid">
-  <div class="span12">
-    <table id="profit" class="table table-condensed table-bordered">
-      <thead>
-      <tr>
-        <th>SKU</th>
-        <th>市场</th>
-        <th>SKU总利润(USD)</th>
-        <th>SKU利润率(%)</th>
-        <th>SKU销售额(USD)</th>
-        <th>亚马逊费用(USD)</th>
-        <th>FBA费用(USD)</th>
-        <th>SKU销量</th>
-        <th>平均采购价(USD)</th>
-        <th>平均运费单价(USD)</th>
-        <th>关税和VAT单价(USD)</th>
+          <div class="input-group">
+            <div class="input-group-addon">SKU</div>
+            <input id="unit_sku" name="p.sku" data-provide="typeahead" data-source="${skus}" value="${p?.sku}" class="form-control">
+          </div>
 
-        <th>(制作中+已交货)库存量</th>
-        <th>在途库存量</th>
-        <th>(入库+在库)库存量</th>
-        <th>(制作中+已交货)库存占用资金总金额(USD)</th>
-        <th>在途库存占用资金总金额(USD)</th>
-        <th>(入库+在库)库存占用资金总金额(USD)</th>
-        <th>备注</th>
-      </tr>
-      </thead>
-      <tbody>
+          <button class="btn btn-primary" data-loading>搜索</button>
+          <button class="btn btn-success" id="exceldown"><i class="icon-download-alt"></i> 导出Excel</button>
+          <button class="btn btn-info" id="reportInventory">计算Inventory成本</button>
+        </form>
+      </div>
+      <div class="box-body">
+        <table id="profit" class="table table-condensed table-bordered">
+          <thead>
+          <tr>
+            <th>SKU</th>
+            <th>市场</th>
+            <th>SKU总利润(USD)</th>
+            <th>SKU利润率(%)</th>
+            <th>SKU销售额(USD)</th>
+            <th>亚马逊费用(USD)</th>
+            <th>FBA费用(USD)</th>
+            <th>SKU销量</th>
+            <th>平均采购价(USD)</th>
+            <th>平均运费单价(USD)</th>
+            <th>关税和VAT单价(USD)</th>
+
+            <th>(制作中+已交货)库存量</th>
+            <th>在途库存量</th>
+            <th>(入库+在库)库存量</th>
+            <th>(制作中+已交货)库存占用资金总金额(USD)</th>
+            <th>在途库存占用资金总金额(USD)</th>
+            <th>(入库+在库)库存占用资金总金额(USD)</th>
+            <th>备注</th>
+          </tr>
+          </thead>
+          <tbody>
           #{list items:profits, as:'pro'}
           <tr>
             <td>${pro.sku}</td>
@@ -90,8 +101,9 @@
             <td>${pro.memo}</td>
           </tr>
           #{/list}
-      </tbody>
-    </table>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
 </div>
-#{/form}
