修改销量分析首页

--- a/core/app/views/Analyzes/index_v3.html
+++ b/core/app/views/Analyzes/index_v3.html
@@ -8,10 +8,9 @@
     #{script 'analyzes/analyzes.coffee'/}
 #{/set}
 
-
 <div class="box box-success">
   <div class="box-body">
-    <div class="row">
+    <div class="row" id="basic">
       <div class="col-md-6" style="height:300px;">
         <div id="a_units" data-method="ajaxUnit"></div>
       </div>
@@ -41,6 +40,7 @@
     <div id="tl" class="col-md-12" style="height:350px;"></div>
   </div>
 </div>
+
 
 <div class="box box-primary">
   <div class="box-header">
