* 修复 出货单的修改清空创建时间时分秒的bug

--- a/core/app/views/DeliverPlans/show.html
+++ b/core/app/views/DeliverPlans/show.html
@@ -43,7 +43,7 @@
                       </div>
                       <label for="subtitle_input" class="col-sm-1 control-label">CreateDate</label>
                       <div class="col-sm-5">
-                        <input readonly class="form-control" name="dp.createDate" value="${dp.createDate.datetime()}">
+                        <input readonly class="form-control" value="${dp.createDate.datetime()}">
                       </div>
                     </div>
                     <div class="form-group">
