--- a/core/app/views/MaterialPlans/index.html
+++ b/core/app/views/MaterialPlans/index.html
@@ -127,12 +127,12 @@
               <td style="background-color:${dp.state.rgb()}">${dp.state.label()}</td>
               <td>${dp.receipt?.label()}</td>
               <td>${dp.receiveCooperator?.name}</td>
-              <td>
+              <td style="width: 80px;">
                   #{if dp.financeState.name() == "PENDING_REVIEW"}
                       #{power.ck "materialplans.approve"}
                         <!-- 只有出货单状态在 已出货 并且财务未审核的情况下 才出现财务审核的按钮 -->
                         <a href="javascript:void(0)" name="approveBtn" data-url='@{MaterialPlans.approve(dp.id)}'
-                           class="btn btn-mini btn-warning" uid="${dp.id}">审核</a>
+                           class="btn btn-xs btn-warning" uid="${dp.id}">审核</a>
                       #{/power.ck}
                     待审
                   #{/if}
