开发erp调用jrockend任务功能

--- a/core/app/views/header_v3.html
+++ b/core/app/views/header_v3.html
@@ -253,6 +253,7 @@
               #{/power.ck}
               #{power.ck "jobs.index"}
                 <li><a href="@{Jobs.index()}">任务管理</a></li>
+                <li><a href="@{Jrockends.index()}">Jrockend任务管理</a></li>
               #{/power.ck}
               #{power.ck "accounts.index"}
                 <li><a href="@{Accounts.index()}">账户管理</a></li>
@@ -694,6 +695,7 @@
             #{/power.ck}
             #{power.ck "jobs.index"}
               <li><a href="@{Jobs.index()}">任务管理</a></li>
+              <li><a href="@{Jrockends.index()}">Jrockend任务管理</a></li>
             #{/power.ck}
             #{power.ck "accounts.index"}
               <li><a href="@{Accounts.index()}">账户管理</a></li>
