--- a/core/app/views/Analyzes/index_v3.html
+++ b/core/app/views/Analyzes/index_v3.html
@@ -6,7 +6,7 @@
 #{set 'moreScripts'}
     #{script 'bootstrap3/jquery.dataTables.js'/}
     #{script 'bootstrap3/dataTables.bootstrap.js'/}
-    #{script 'bootstrap3/highcharts.js'/}
+    #{script 'highstock.js'/}
     #{script 'timeline/timeline_js/timeline-api.js'/}
     #{script 'analyzes/timeline.coffee'/}
     #{script 'analyzes/analyzes.coffee'/}
