--- a/core/app/views/Analyzes/sid.html
+++ b/core/app/views/Analyzes/sid.html
@@ -1,5 +1,5 @@
 <!-- 生成 Analyzes 页面下方的 selling 信息 -->
-<table id="sorttable" class="table table-condensed table-bordered">
+<table id="sorttable" class="table table-condensed table-bordered hover">
   <thead>
   <tr>
     <th title="可双击下面 MerchantSKU">SellingId</th>
