--- a/core/app/views/Analyzes/index_v3.html
+++ b/core/app/views/Analyzes/index_v3.html
@@ -40,7 +40,7 @@
   </div>
 </div>
 
-<div class="box box-warning">
+<div class="box">
   <div class="box-body">
     <div id="tl" class="col-md-12" style="height:350px;"></div>
   </div>
