修改供应商编辑页面结构 以及支持一个物料可以同时属于多个供应商

--- a/core/app/views/Cooperators/newCooperItem.html
+++ b/core/app/views/Cooperators/newCooperItem.html
@@ -26,7 +26,7 @@
   <form action="${action}" method="post" autocomplete="off">
     <table class="table table-condensed table-bordered" id="form_table">
       <tr>
-        <th>SKU</th>
+        <th>SKUcop_update_qcinfo</th>
         <td>
           <input type="text" id='copItem_sku' name="copItem.sku" data-provide="typeahead" data-source="${skus}" placeHolder="填写 SKU" value="${copItem.sku}">
           <input type="hidden" name="cooperId"  value="${cop.id}">
