销量分析页面sku tab显示问题

--- a/core/app/views/Analyzes/index_v3.html
+++ b/core/app/views/Analyzes/index_v3.html
@@ -116,8 +116,8 @@
     <div class="row-fluid">
       <div class="nav-tabs-custom">
         <ul id="below_tab" class="nav nav-tabs">
-          <li class="active"><a href="#sid" data-toggle="tab">SID</a></li>
-          <li class=""><a href="#sku" data-toggle="tab">SKU</a></li>
+          <li class="active"><a href="#sid" data-toggle="tab" data-type="sid">SID</a></li>
+          <li class=""><a href="#sku" data-toggle="tab" data-type="sku">SKU</a></li>
         </ul>
 
         <div id="below_tabContent" class="tab-content">
