--- a/core/app/views/Analyzes/sid.html
+++ b/core/app/views/Analyzes/sid.html
@@ -53,8 +53,7 @@
       </div>
     </td>
     <td style="background:${'#'+psDiffer._2}">
-      <input type="text" ps sid="${dto.fid}" value="${dto.ps}" class="form-control input-xs"
-             style="width:40px;padding:3px;">
+      <input type="text" ps sid="${dto.fid}" value="${dto.ps}" class="form-control input-xs" style="width:40px;padding:3px;">
     </td>
     <td>${dto.day1}</td>
     <td style="color:${dto.difference.rgb()}">${dto.difference.format('#.##')} (${dto.percentage().format('#.##%')})</td>
