--- a/core/app/views/Analyzes/sku.html
+++ b/core/app/views/Analyzes/sku.html
@@ -14,9 +14,7 @@
     <th>评分趋势</th>
     <th>PS</th>
     <th>Day1</th>
-    <th>
-      <abbr title="Day1与Day7平均值的差值(百分比)">Diff(%)</abbr>
-    </th>
+    <th><abbr title="Day1与Day7平均值的差值(百分比)">Diff(%)</abbr></th>
     <th>Day7</th>
     <th>Day7ave</th>
     <th>Day30</th>
@@ -37,15 +35,10 @@
     <td class="text-success">${dto.qty}</td>
     <td><a href="javascript:;" rel="tooltip" title="${dto.reviewRatio}">${dto.reviews}</a></td>
     <td>${dto.rating.format('#.##')}</td>
-    <td>
-        #{render 'Analyzes/_rating_icon.html', dto:dto/}
-    </td>
+    <td>#{render 'Analyzes/_rating_icon.html', dto:dto/}</td>
     <td>${dto.ps_cal.format('#.##')}</td>
     <td>${dto.day1}</td>
-    <td style="color:${dto.difference.rgb()}">
-    ${dto.difference.format('#.##')}
-      (${dto.percentage().format('#.##%')})
-    </td>
+    <td style="color:${dto.difference.rgb()}">${dto.difference.format('#.##')} (${dto.percentage().format('#.##%')})</td>
     <td>${dto.day7}</td>
     <td>${(dto.day1 - dto.difference).format('#.##')}</td>
     <td>${dto.day30}</td>
